--- a/ecdsa/config/config.toml
+++ b/ecdsa/config/config.toml
@@ -6,7 +6,7 @@
 
 [ethereum.account]
  Address = $KEEP_OPERATOR_ADDRESS
- KeyFile = /root/.ethereum/ropsten/keystore/$KEEP_OPERATOR_KEYFILE_NAME
+ KeyFile = $KEEP_OPERATOR_KEYFILE_NAME
 
 [ethereum.ContractAddresses]
   BondedECDSAKeepFactory = "0xb37c8696cD023c11357B37b5b12A9884c9C83784"
